finished brand-slider

--- a/brand-slider.html
+++ b/brand-slider.html
@@ -14,8 +14,8 @@
         <header class="section__header">
             <h2 class="section__title">Ремонт техники различных брендов</h2>
         </header>
-        <div class="section__body brand-slider section__body--preview">
-            <ul class="brand-slider__list">
+        <div class="section__body brand-slider">
+            <ul class="brand-slider__list brand-slider__list--preview">
                 <li class="brand-slider__item">
                     <img
                         src="img/lenovo.svg"
@@ -88,7 +88,7 @@
                 </li>
                 <li class="brand-slider__item">
                     <img
-                        src="img/img/sony.svg"
+                        src="img/sony.svg"
                         alt=""
                         class="brand-slider__image"
                     />
