fixed elements sizes

--- a/brand-slider.html
+++ b/brand-slider.html
@@ -4,137 +4,161 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/nullstyle.css" type="text/css" />
-        <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="css/swiper-bundle.min.css" />
         <link rel="stylesheet" href="css/fonts.css" type="text/css" />
         <link rel="stylesheet" href="css/style.css" type="text/css" />
         <title>Document</title>
     </head>
-    <body> 
+    <body>
         <section class="section">
-        <header class="section__header">
-            <h2 class="section__title">Ремонт техники различных брендов</h2>
-        </header>
-        <div class="section__body brand-slider">
-            <ul class="brand-slider__list brand-slider__list--preview">
-                <li class="brand-slider__item">
-                    <img
-                        src="img/lenovo.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/viewsonic.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/samsung.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/apple.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/bosh.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/hp.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/aser.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/sony.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/lenovo.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/viewsonic.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-                <li class="brand-slider__item">
-                    <img
-                        src="img/samsung.svg"
-                        alt=""
-                        class="brand-slider__image"
-                    />
-                    <button class="brand-slider__button">
-                        <img src="img/dropdown.svg" />
-                    </button>
-                </li>
-            </ul>
-            <div class="swiper-pagination" id="brandsPagination"></div>
-        <button
-            class="section__show-more-button section__show-more-button--reversed"
-        >
-            Показать все
-        </button>
-    </section>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/button.js"></script>
-    <script src="js/index.js"></script></body>
+            <header class="section__header">
+                <h2 class="section__title">Ремонт техники различных брендов</h2>
+            </header>
+            <div class="section__body brand-slider">
+                <ul class="brand-slider__list brand-slider__list--preview">
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/lenovo.svg"
+                            alt="lenovo"
+                            width="108"
+                            height="32"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/viewsonic.svg"
+                            alt="viewsonic"
+                            width="128"
+                            height="21"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/samsung.svg"
+                            alt="samsung"
+                            width="116"
+                            height="38"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/apple.svg"
+                            alt="apple"
+                            width="44"
+                            height="44"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/bosh.svg"
+                            alt="bosh"
+                            width="128"
+                            height="28"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/hp.svg"
+                            alt="bosh"
+                            width="52"
+                            height="52"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/aser.svg"
+                            alt="acer"
+                            width="94"
+                            height="24"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/sony.svg"
+                            alt="sony"
+                            width="128"
+                            height="25"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/lenovo.svg"
+                            alt="lenovo"
+                            width="108"
+                            height="32"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/viewsonic.svg"
+                            alt="viewsonic"
+                            width="128"
+                            height="21"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                    <li class="brand-slider__item">
+                        <img
+                            src="img/samsung.svg"
+                            alt="samsung"
+                            width="116"
+                            height="38"
+                            class="brand-slider__image"
+                        />
+                        <button class="brand-slider__button">
+                            <img src="img/dropdown.svg" />
+                        </button>
+                    </li>
+                </ul>
+                <div class="swiper-pagination" id="brandsPagination"></div>
+                <button
+                    class="section__show-more-button section__show-more-button--reversed"
+                >
+                    Показать все
+                </button>
+            </div>
+        </section>
+        <script src="js/swiper-bundle.min.js"></script>
+        <script src="js/button.js"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
